--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
 	</div>
     
     <!-- ==================== HERO SECTION ==================== -->
+	<div id="pageLoader" style="display:none;">
+        <div class="loader-spinner"></div>
+        <div class="loader-text">Loading lesson...</div>
+        <div class="progress-bar">
+            <div class="progress-fill" id="progressFill"></div>
+        </div>
+        <div class="loader-text" id="progressText">0%</div>
+    </div>
     <section class="hero-section" id="heroSection">
         <div class="container">
             <div class="row align-items-center">
