--- a/tut-chal.html
+++ b/tut-chal.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="lessonContent" class="container" style="display:none;">
 	<div class="row">
 		<div class="col-lg-3 col-md-6 col-lg-12">
 			<div class="lesson-menu">
